--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/SoondubuJjigae.html">Soondubu Jjigae Recipe</a>
+    <ul>
+        <li><a href="recipes/SoondubuJjigae.html">Soondubu Jjigae Recipe</a></li>
+        <li><a href="recipes/grilled-cheese.html">Grilled Cheese Recipe</a></li>
+        <li></li>
+    </ul>
 </body>
 </html>
