Added a new recipe for Chocolate Chip Cookies

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <ul>
         <li><a href="recipes/SoondubuJjigae.html">Soondubu Jjigae Recipe</a></li>
-        <li><a href="recipes/grilled-cheese.html">Grilled Cheese Recipe</a></li>
-        <li></li>
+        <li><a href="recipes/Grilled-cheese.html">Grilled Cheese Recipe</a></li>
+        <li><a href="recipes/Chocolate-chip-cookie.html">Chocolate Chip Cookie</a></li>
     </ul>
 </body>
 </html>
